--- a/trunk/adquisiciondatos.ui
+++ b/trunk/adquisiciondatos.ui
@@ -44,6 +44,9 @@
      </font>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="spacing">
+      <number>1</number>
+     </property>
      <item>
       <widget class="QCheckBox" name="checkBox_4">
        <property name="font">
@@ -56,6 +59,9 @@
        </property>
        <property name="cursor">
         <cursorShape>ArrowCursor</cursorShape>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(198, 198, 198);</string>
        </property>
        <property name="text">
         <string>QNX1</string>
@@ -75,6 +81,9 @@
          <bold>true</bold>
         </font>
        </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(198, 198, 198);</string>
+       </property>
        <property name="text">
         <string>QNX2</string>
        </property>
@@ -93,6 +102,9 @@
          <bold>true</bold>
         </font>
        </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(198, 198, 198);</string>
+       </property>
        <property name="text">
         <string>QNX3</string>
        </property>
@@ -110,6 +122,9 @@
          <weight>75</weight>
          <bold>true</bold>
         </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(198, 198, 198);</string>
        </property>
        <property name="text">
         <string>QNX4</string>
@@ -215,12 +230,12 @@
      <string>(guiado)</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="ObservarPushButton">
+   <widget class="QPushButton" name="observarPushButton">
     <property name="geometry">
      <rect>
-      <x>80</x>
+      <x>40</x>
       <y>220</y>
-      <width>151</width>
+      <width>121</width>
       <height>31</height>
      </rect>
     </property>
@@ -233,12 +248,12 @@
      <string>Observar</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="SalirPushButton">
+   <widget class="QPushButton" name="salirPushButton">
     <property name="geometry">
      <rect>
-      <x>230</x>
+      <x>160</x>
       <y>220</y>
-      <width>151</width>
+      <width>131</width>
       <height>31</height>
      </rect>
     </property>
@@ -251,12 +266,12 @@
      <string>Salir</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="EmcabezadosPushButton">
+   <widget class="QPushButton" name="emcabezadosPushButton">
     <property name="geometry">
      <rect>
-      <x>380</x>
+      <x>290</x>
       <y>220</y>
-      <width>151</width>
+      <width>121</width>
       <height>31</height>
      </rect>
     </property>
@@ -737,6 +752,24 @@
       <widget class="QLineEdit" name="indiceDeLaObservacionLineEdit"/>
      </item>
     </layout>
+   </widget>
+   <widget class="QPushButton" name="modiaPushButton">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>220</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>13</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Modia</string>
+    </property>
    </widget>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
